# SoliloS

./: .gitignore  Dockerfile  MCP_SERVER_MANUAL.txt  README.md  comprehensive_test.py  pyproject.toml  requirements.txt  verify_install.py
src/: headless_runner.py  main.py  state.py
src/tools/: analysis_tools.py  env_tools.py  project_tools.py  request_tools.py  security_tools.py  workflow_tools.py
src/tools/advanced/: chaos.py  graphql.py  grpc_dynamic.py  grpc_tools.py  websocket.py
src/tools/discovery/: api_discovery.py
src/tools/integration/: ci_export.py  openapi_export.py  postman_export.py
src/tools/intelligence/: response_intelligence.py
src/tools/monitoring/: monitor.py
src/tools/reporting/: report_generator.py
src/tools/scenarios/: complex_flow.py  error_testing.py  load_testing.py  stress_testing.py
src/tools/security/: auth_testing.py  rate_limit.py  sensitive_data.py
src/tools/validation/: breaking_changes.py  compare_environments.py  contract_validation.py  schema_fuzzer.py
tests/: demo_flow.py
